# experiment-cifar

./: README.md  pyproject.toml
configs/: model1.yaml  model2.yaml
src/: dataset.py  model.py  pl_run.py  pl_trainer.py  run.py  train.py  utils.py
